<resources>
    <string name="app_name">Recipe App</string>
    <string name="ingredient">Ingredients</string>
    <string name="description">Description</string>
    <string name="steps">Steps</string>
    <string name="search_ingredients">Search ingredients</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="likes">Likes</string>
    <string name="settings">Settings</string>
    <string name="readyIn">Ready in %1$s minutes</string>
    <string name="mainPage"> </string>
    <string name="back_button">Back button</string>
    <string name="search_button">Search button</string>
    <string name="home_button">Home button</string>
    <string name="history_button">History button</string>
    <string name="like_button">Like button</string>
    <string name="settings_button">Settings button</string>
    <string name="ingredient_description">Ingredient description</string>
    <string name="instructions_image">Instructions image</string>
    <string name="recipe_preview">Recipe preview</string>
    <string name="preview_like_button">Preview Like button</string>
    <string name="preview_heart">Preview Heart</string>
    <string name="recipe_cover">Recipe cover</string>
    <string name="one">1</string>
    <string name="name">Name</string>
    <string name="no_summary">No summary provided</string>
</resources>