<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="150dp"
    android:layout_height="230dp"
    android:layout_margin="20dp"
    android:id="@+id/main_item">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/recycler_image_container">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/food_picture"
            android:adjustViewBounds="true"
            android:id="@+id/recycler_image"
            android:contentDescription="@string/recipe_preview">
        </ImageView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/main_recycler_btn"
                android:alpha="0.65"
                android:id="@+id/recycler_like"
                android:contentDescription="@string/preview_like_button">
            </ImageButton>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/small_heart"
                android:layout_centerInParent="true"
                android:id="@+id/recycler_heart"
                android:contentDescription="@string/preview_heart">
            </ImageView>

        </RelativeLayout>

    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_image_container"
        android:text=""
        style="@style/head_text"
        android:layout_marginTop="10dp"
        android:id="@+id/recycler_headtext"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_headtext"
        android:text=""
        style="@style/subhead_gray"
        android:layout_marginTop="5dp"
        android:id="@+id/recycler_type"/>

</RelativeLayout>